# aws-research-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: cli.py  hello_tool_use.py  test_guardrails.py  test_research.py  test_search.py
src/: config.py  logger.py
src/agent/: guardrails.py  loop.py  observer.py
src/tools/: base.py  web_fetch.py  web_search.py
tests/unit/: test_guardrails.py
