[project]
name = "aws-research-agent"
version = "0.1.0"
description = "Autonomous AI research agent for AWS/Cloud topics using Claude tool use"
authors = [{name = "Henry Gomez Lofiego", email = "henrylofiego@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
  "anthropic>=0.40.0",
  "tavily-python>=0.5.0",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "python-dotenv>=1.0.0",
  "structlog>=24.4.0",
  "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.7.0",
  "mypy>=1.13.0",
  "ipykernel>=6.29.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
